--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@prisma/client": "^5.19.1",
     "concurrently": "^9.0.1",
+    "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "fastify-jwt": "^4.1.3",
+    "fastify-swagger": "^5.1.1",
     "fastify-zod": "^1.4.0",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.3"
